add lists and seperate components and add state that changes based on user selcection

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "twitch-clone",
+  "name": "smash-about-us",
   "version": "1.0.0",
-  "description": "A clone of Twitch.tv",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
